whitespaces fix

--- a/Portfolio.css
+++ b/Portfolio.css
@@ -1274,14 +1274,8 @@ footer{
     }
     
     #projects{
-<<<<<<< HEAD
-    margin-bottom: 10rem;
-    }
-    
-=======
         margin-bottom:10rem;
     }
->>>>>>> eb0948e13990f54d4158ee2568621e6ab110e05a
 
 }
 
